--- a/index.html
+++ b/index.html
@@ -21,39 +21,51 @@
     <div class="app-container">
       <header class="app-heading">
         <h1 class="shadow-text">
-          Visualizing STEAM: a digital game platform
+          VISUALIZING STEAM: PERSPECTIVES ON WHAT MAKES A GAME POPULAR
         </h1>
       </header>
 
       <main class="app-main">
         <div class="card">
+
+          <section class="data-section">
+            <h2>Introduction</h2>
+            <div class="data-columns">
+              <div class="data-row">
+                <p>
+                  The games industry is continually growing, representing a big portion of media production nowadays. In
+                  Brazil, one of the biggest gaming markets, <strong>approximately 75% of the
+                    population</strong> plays games, be it
+                  through their smartphones, personal computers or gaming consoles. Valve officially launched Steam in
+                  2003 and now it’s one of the biggest platforms for buying and playing video games on the computer,
+                  presenting a huge database with a diverse set of information and metrics from each game launched on
+                  the platform.
+                </p>
+              </div>
+            </div>
+          </section>
+
           <section class="data-section">
             <h2>Objective</h2>
             <div class="data-columns">
               <div class="data-row">
                 <p>
-                  Our visualization aims to develop the interactive analytics
-                  dashboard that builds on the
-                  <strong class="steam">Steam</strong> data on games and
-                  individual players collected through open-source APIs to
-                  offer the insightful look at recent trends in the gaming
-                  industry.
+                  Our visualization aims to present an interactive analytics dashboard that builds on <strong
+                    class="steam">Steam</strong>’s data on games and general player metrics collected through
+                  open-source APIs to offer an insightful look at recent trends in the gaming industry.
                 </p>
                 <p>
-                  We start by visualizating the release rate of the games by
-                  year. This chart is interactive, so you can filter the years
-                  range.
+                  We start with an overview of the games launched by year. You can select specific time periods by
+                  clicking and dragging on the visualization space.
                 </p>
               </div>
               <div class="data-row">
                 <p>
                   We conducted a sampling process to curate a dataset
-                  comprising the <strong>250 most reviewed games</strong> that
-                  were released <strong>before the year 2019</strong>,
-                  ensuring that each selected game possesses a minimum age of
-                  five years. This criterion not only guarantees a diverse
-                  representation of the gaming landscape but also focuses on
-                  titles that have withstood the test of time.
+                  comprising the <strong>250 most reviewed games</strong> released <strong>until 2019 </strong>,
+                  ensuring that each selected game possesses at least five active years. This criterion not only allows
+                  a diverse representation of the gaming landscape but also helps identify titles that have withstood
+                  the test of time.
                 </p>
               </div>
             </div>
@@ -70,15 +82,17 @@
             <div class="data-columns">
               <div class="data-row">
                 <p>
-                  This visualization aims to answer some question about to the
-                  gaming culture on <strong class="steam">Steam</strong>:
+                  To guide the development of the visualizations presented in this dashboard, a set of questions where
+                  defined. Throughout the text, the link between visualizations and the questions proposed will be
+                  marked with brackets (<strong class="steam">[]</strong>). The questions are as follows:
                 </p>
                 <ol class="question-list">
-                  <li>What are the most popular genres and tags on Steam?</li>
+                  <li>What are the most popular genres and tags on <strong class="steam">Steam</strong>?</li>
                   <li>What games are more popular right now?</li>
                   <li>What is the relation of popularity and reviews?</li>
                   <li>What is the relation of price and reviews?</li>
-                  <li>What countries are producing more games?</li>
+                  <li>What platforms are more popular right now</li>
+                  <li>What countries have more gamer developers?</li>
                 </ol>
               </div>
             </div>
@@ -90,7 +104,7 @@
               <div class="data-row">
                 <p>
                   The pie chart on the left side compares the
-                  <strong>quantity by year of released games separated by genre
+                  <strong>proportion of games launched by genre
                     [1]</strong>. Note that a single game can have multiple genres (e.g.
                   Grand Theft Auto V is both Action and Adventure), in that
                   case, each genre is considered.
@@ -98,10 +112,9 @@
               </div>
               <div class="data-row">
                 <p>
-                  The line chart on the right side displays player engagement
-                  trends for the different game genres over the years. Each
-                  line represents a genre and compares the popularity of a
-                  gender in the players community
+                  The line chart on the right side displays player activity trends for different game genres over the
+                  years. Each line represents a genre and compares the popularity of a genre in the community from
+                  January 2019 to September 2023
                   <strong class="steam">[2]</strong>.
                 </p>
               </div>
@@ -125,27 +138,23 @@
               <div class="data-row">
                 <p>
                   On Steam, tags serve as descriptive keywords for the Steam
-                  community collectively. Unlike genres, those
-                  <strong>tags are added by the players</strong> and are based
+                  community collectively. Unlike genres, <strong>tags are added by the players</strong> and are based
                   on user input and votes.
                 </p>
                 <p>
-                  This freedom of input permits more specific descriptions and
-                  offen bring rich information about the game. quantity by
-                  year of released games separated by genre.
+                  This freedom of input allows more specific descriptions and often brings rich information about the
+                  game.
                 </p>
               </div>
               <div class="data-row">
                 <p>
-                  As an example, we have Grand Theft Auto V with genres equals
-                  "Action, Adventure" and tags equals "Open World, Action,
-                  Automobile Sim, Multiplayer, Crime', Third Person, ...",
-                  with way more details.
+                  For example, Grand Theft Auto V is classified as with "action” and “adventure" genres only, while the
+                  community added "open world”, “action”, “automobile sim”, “multiplayer”, “crime”, “third person” and
+                  many other tags, giving much more detail to Steam’s classification system.
                 </p>
                 <p>
-                  We now present a word cloud where we highlight the most
-                  frequent tags added by the users.
-                  <strong class="steam">[1]</strong>
+                  Below there is a word cloud where we highlight Steam’s most frequently used tags
+                  <strong class="steam">[1]</strong>.
                 </p>
               </div>
             </div>
@@ -153,7 +162,6 @@
               <div class="data-graph-content">
                 <div title="word cloud" width="1000" height="420" id="observablehq-viewof-tag_word_cloud_plot-52b3ab46">
                 </div>
-
               </div>
             </div>
           </section>
@@ -163,11 +171,9 @@
             <div class="data-columns">
               <div class="data-row">
                 <p>
-                  We now present the
-                  <strong>top 10 most popular games</strong> on
-                  <strong class="steam">Steam</strong>, the games are ordered
-                  by the mean quantity of playes between the years of 2019 and
-                  2023 <strong class="steam">[2]</strong>.
+                  The following graph shows the <strong>top 10 most popular games</strong> on <strong
+                    class="steam">Steam</strong>, the games are ordered by the mean quantity of playes between the years
+                  of 2019 and 2023 <strong class="steam">[2]</strong>.
                 </p>
               </div>
             </div>
@@ -185,12 +191,12 @@
               <div class="data-row">
                 <p>
                   <strong class="steam">Steam</strong> games reviews are
-                  binary, each player can give one positive or negative
-                  review. To analyse them, we present a scatter plot with the
+                  binary, each player can only give one positive or negative
+                  review. To analyse these reviews, we present a scatter plot with the
                   review rate
-                  <strong>(positive reviews / total reviews) and popularity
-                    (average number of players between jan-2019 and
-                    sep-2023)</strong>
+                  <strong>(positive reviews / total reviews)</strong> and popularity
+                  <strong>(average number of players between January 2019 and
+                    September 2023)</strong>
                   <strong class="steam">[3]</strong>.
                 </p>
               </div>
@@ -212,7 +218,7 @@
                   One interesting comparation is the
                   <strong>proportion of free and paid games</strong>
                   <strong class="steam">[4]</strong>. We present this data on
-                  the pie chart on the right.
+                  the pie chart on the <strong>right</strong>.
                 </p>
                 <p>
                   We consider the initial price
@@ -220,8 +226,8 @@
                   analyse the relationship between price and popularity,
                   <strong>below</strong> we present a scatter plot with the
                   price and popularity
-                  <strong>(average number of players between jan-2019 and
-                    sep-2023)</strong>
+                  <strong>(average number of players between January 2019 and
+                    September 2023)</strong>
                   <strong class="steam">[4]</strong>.
                 </p>
               </div>
@@ -246,22 +252,20 @@
             <div class="data-columns">
               <div class="data-row">
                 <p>
-                  We are also interested in the
-                  <strong class="steam">Steam</strong> developer community. We
-                  first analise the supported plaforms (operational systems)
+                  We are also interested in understanding the
+                  <strong class="steam">Steam</strong>'s developer community. We
+                  first analise the supported plaforms
                   of the games on the pie chart on the <strong>right</strong>
                   <strong class="steam">[5]</strong>. There are tree possible
-                  platforms: <strong>Windows, Linux and Mac</strong>, and one
-                  interesting fact is that all games support Windows Steam.
+                  platforms: <strong>Windows, Linux and Mac</strong>, and since Steam was primarily released on Windows
+                  (becoming available to MacOS in 2010 and Linux systems in 2012), all games support Windows..
                 </p>
                 <p>
-                  We also analise relationship between the developers and
-                  games using a graph plot. In this plot,
-                  <strong>red circles represent the games</strong> while
-                  <strong>blue circles represents the developers</strong>.
-                  Also, the
-                  <strong>developer nodes are sized by the sum of popularity of all
-                    it's games</strong>.
+                  We also analyze the relationship between developers and games using a network graph. The <strong
+                    style="color:red;">red</strong> <strong>circles
+                    represent games</strong> while the <strong style="color:#6495ED;">blue</strong> <strong>circles
+                    represent the developers</strong>. Also, <strong>developer nodes have different
+                    sizes based on the sum of all of their games’ popularity</strong>.
                 </p>
               </div>
 
@@ -285,10 +289,9 @@
             <div class="data-columns">
               <div class="data-row">
                 <p>
-                  To see what countries are producing more games, we make a
-                  world choropleth map, where each country is shaded to show
-                  the <strong>quantity of game development companies</strong>
-                  <strong class="steam">[6]</strong>.
+                  To visualize which countries are producing more games, we present a world choropleth map, where each
+                  country is colored in different shades to show the <strong>number of game development
+                    companies</strong> <strong class="steam">[6]</strong>.
                 </p>
               </div>
             </div>
