--- a/index.html
+++ b/index.html
@@ -120,14 +120,8 @@
               </div>
             </div>
             <div class="data-graph genres-graphs">
-              <div class="data-graph-content genre-pie">
-                <div title="genre pie" width="300" height="464" id="observablehq-viewof-genre_pie_plot-52b3ab46"></div>
-              </div>
-
-              <div class="data-graph-content genre-avg-players">
-                <div title="avg players" width="530" height="448"
-                  id="observablehq-viewof-avg_players_by_genre_plot-52b3ab46"></div>
-
+              <div class="data-graph-content">
+                <div title="genre pie" width="1000" height="464" id="observablehq-viewof-genre_pie_plot-52b3ab46"></div>
               </div>
             </div>
           </section>
